@@ -15,9 +15,27 @@ class SearchHelperTest extends FeatureTestCase
     {
         $user = $this->signin();
 
-        $contact = factory(Contact::class)->make();
+        $contact = factory(Contact::class)->create([
+            'account_id' => $user->account->id,
+        ]);
         $searchResults = SearchHelper::searchContacts($contact->first_name, 1, 'created_at');
 
+        $this->assertNotNull($searchResults);
         $this->assertInstanceOf('Illuminate\Pagination\LengthAwarePaginator', $searchResults);
+        $this->assertCount(1, $searchResults);
+    }
+
+    public function test_searching_with_wrong_search_field()
+    {
+        $user = $this->signin();
+
+        $contact = factory(Contact::class)->create([
+            'account_id' => $user->account->id,
+        ]);
+        $searchResults = SearchHelper::searchContacts('wrongsearchfield:1', 1, 'created_at');
+
+        $this->assertNotNull($searchResults);
+        $this->assertInstanceOf('Illuminate\Pagination\LengthAwarePaginator', $searchResults);
+        $this->assertCount(0, $searchResults);
     }
 }
