@@ -9,6 +9,7 @@ UNRELEASED CHANGES:
 * Fix login remember with 2fa and u2f enabled
 * Fix gender update
 * Fix how comparing version is done
+* Fix search with wrong search field
 
 RELEASED VERSIONS:
 
